# testlib

./: .gitignore  LICENSE  pyproject.toml
src/testlib/: __init__.py
src/testlib/submodule1/: __init__.py  file1.py
src/testlib/submodule2/: __init__.py
testlib/equations/: __init__.py  equations.py
testlib/utils/: __init__.py  utils.py
